--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=PKAE_Timer
-version=0.0.0
-author=PKAE Electronics
-maintainer=Paul <PKAE.electronics@pkae.co.uk>
-sentence=Useful Timer library for Sheduling Tasks in loop
-paragraph=Works with DS1307, DS3231, PCF8523, PCF8563 on multiple architectures
+version=0.0.1
+author=PKAE Electronics (Paul) <PKAE.electronics@pkae.co.uk>
+maintainer=Abhijit Bose (aka. Boseji) <boseji.com>
+sentence=Useful Timer library for Scheduling Tasks in loop
+paragraph=Works with multiple architectures
 category=Timing
-url=https://github.com/boseji/PKAE_Timer
+url=https://github.com/ardlib/bosejis_PKAE_Timer
 architectures=*
+includes=PKAE_Timer.h
